--- a/pages/signin.html
+++ b/pages/signin.html
@@ -5,10 +5,45 @@
   <meta charset="UTF-8">
   <meta name="viewport" contemt="width=device-width, initial-scale=1.0">
   <link href="../css/signin.css" rel="stylesheet" text="text/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css">
 </head>
 <body>
-  <h1>Sign In</h1>
-  <div class="background"></div>
-  <p>Welcome!</p>
+ <div class="container" id="container">
+   <div class="form-container sign-up">
+     <form action="#">
+       <h1>Create Account</h1>
+       <div class="social-container">
+         <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
+         <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+         <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+         <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>see
+       </div>
+       <span>or use your email for registration</span>
+       <input type="text" placeholder="Name" value="name">
+         <input type="email" value="email" placeholder="email"/>
+      <input type="password" value="password" placeholder="password"/>
+         <button>Sign up</button>
+     </form>
+   </div>
+      <div class="form-container sign-up">
+     <form action="#">
+       <h1>Sign in</h1>
+       <div class="social-container">
+         <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
+         <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
+         <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
+         <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>see
+       </div>
+       <span>or use your email and password</span>
+         <input type="email" value="email" placeholder="email"/>
+      <input type="password" value="password" placeholder="password"/>
+       <a href="#">Forget Your Password?</a>
+         <button>Sign in</button>
+     </form>
+      </div>
+      </div>
+ </div>
+
+  <script src="script.js"></script>  
 </body>
 </html>
