--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
     <h1>"WELCOME TO MY WEBSITE"</h1>
     </header>
     <main>
-    <div class="img1"></div>
+    <div class="img1">
     <img src="image.jpeg" alt="pic of a boy with a cat" id="img"/>
     <section>
-    <p id="para1">Hey there how is this picture, its really cute right, well anyways lets get started. As you can see this dark theme is really attractive</p>
-    <p id="para2">Click on the button below "sign in" to get started and to get our latest projects through your email. if you have an account click on the "login" button</p>
+    <p id="para1">Hey there how is this picture, its really cute right, well anyways lets get started. As you can see this dark theme is really attractive<br><br>Click on the button below "sign in" to get started and to get our latest projects through your email. if you have an account click on the "login" button</p>
         <button class="btn1"><a href="pages/signin.html">Sign up</a></button>
         <button class="btn2"><a href="pages/login.html">login</a></button>
         
     </section>
+    </div>
     </main>
     <footer></footer>
 </body>
