--- a/pages/signin.html
+++ b/pages/signin.html
@@ -3,9 +3,10 @@
 <head>
   <title>Sign In</title>
   <meta charset="UTF-8">
-  <meta name="viewport" contemt="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="../css/signin.css" rel="stylesheet" text="text/css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
  <div class="container" id="container">
@@ -16,14 +17,16 @@
          <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
          <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
          <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-         <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>see
+         <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
        </div>
        <span>or use your email for registration</span>
-       <input type="text" placeholder="Name" value="name">
-         <input type="email" value="email" placeholder="email"/>
-      <input type="password" value="password" placeholder="password"/>
+       <input type="text" placeholder="Name">
+         <input type="email" placeholder="email"/>
+      <input type="password" placeholder="password"/>
          <button>Sign up</button>
      </form>
+     <br>
+     <br>
    </div>
       <div class="form-container sign-up">
      <form action="#">
@@ -32,16 +35,17 @@
          <a href="#" class="icon"><i class="fa-brands fa-google"></i></a>
          <a href="#" class="icon"><i class="fa-brands fa-facebook-f"></i></a>
          <a href="#" class="icon"><i class="fa-brands fa-github"></i></a>
-         <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>see
+         <a href="#" class="icon"><i class="fa-brands fa-linkedin-in"></i></a>
        </div>
        <span>or use your email and password</span>
-         <input type="email" value="email" placeholder="email"/>
-      <input type="password" value="password" placeholder="password"/>
+         <input type="email"  placeholder="email"/>
+      <input type="password" placeholder="password"/>
        <a href="#">Forget Your Password?</a>
          <button>Sign in</button>
      </form>
       </div>
-      </div>
+
+      </div>    
  </div>
 
   <script src="script.js"></script>  
